--- a/index.html
+++ b/index.html
@@ -19,3 +19,14 @@
     </header>
 </body>
 </html>
+<link rel="preconnect" href="https://fonts.googleapis.com  " />
+<link rel="preconnect" href="https://fonts.gstatic.com  " crossorigin />
+<link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;700&display=swap  " rel="stylesheet " />
+
+
+
+
+
+
+
+
